--- a/index.html
+++ b/index.html
@@ -130,14 +130,6 @@
       text-transform: uppercase;
     }
 
-    #stateSuggestion {
-      margin-top: 1rem;
-      font-size: 1rem;
-      font-weight: bold;
-      color: var(--accent);
-      cursor: pointer;
-    }
-
     #result ul {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -238,148 +230,6 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Rego Check</h1>
-    <div class="theme-toggle-container">
-      <label class="toggle-switch">
-        <input type="checkbox" id="themeToggle" />
-        <span class="slider"></span>
-      </label>
-    </div>
-  </header>
-
-  <main>
-    <div id="leftPanel">
-      <input type="text" id="regoInput" placeholder="e.g. AXH950 or AXH950 V" />
-      <div id="stateSuggestion"></div>
-      <div id="result"></div>
-    </div>
-    <aside id="recentSearches">
-      <h3>Recent Regos</h3>
-      <ul id="recentList"></ul>
-    </aside>
-  </main>
-
-  <script>
-    const stateLinks = {
-      VIC: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration/vehicle-registration-enquiry",
-      NSW: "https://check-registration.service.nsw.gov.au/?isLoginRequired=true",
-      QLD: "https://www.service.transport.qld.gov.au/checkrego/application/VehicleSearch.xhtml?dswid=-124",
-      SA: "https://account.ezyreg.sa.gov.au/account/check-registration.htm#error=login_required",
-      WA: "https://online.transport.wa.gov.au/webExternal/registration/",
-      TAS: "https://www.transport.tas.gov.au/MRSWebInterface/public/regoLookup/registrationLookup.xhtml",
-      ACT: "https://rego.act.gov.au/regosoawicket/public/reg/FindRegistrationPage",
-      NT: "https://nt.gov.au/driving/rego/existing-nt-registration/rego-check"
-    };
-
-    const input = document.getElementById("regoInput");
-    const result = document.getElementById("result");
-    const recentList = document.getElementById("recentList");
-    const suggestion = document.getElementById("stateSuggestion");
-    const themeToggle = document.getElementById("themeToggle");
-
-    let recentRegos = [];
-
-    const detectState = (rego) => {
-      if (/^[A-Z]{3}[0-9]{3}$/.test(rego)) return 'VIC';
-      if (/^Y[A-Z0-9]{5}$/.test(rego)) return 'ACT';
-      if (/^[A-Z]{2}[0-9]{2}[A-Z]{2}$/.test(rego)) return 'NSW';
-      if (/^[A-Z]{3}[0-9]{2}$/.test(rego)) return 'QLD';
-      if (/^[A-Z]{1}[0-9]{3}[A-Z]{2}$/.test(rego)) return 'SA';
-      if (/^[A-Z]{1,2}[0-9]{5}$/.test(rego)) return 'WA';
-      if (/^[A-E][A-Z0-9]{5}$/.test(rego)) return 'TAS';
-      if (/^C[AB][0-9]{4}$/.test(rego)) return 'NT';
-      return null;
-    };
-
-    function addRecentRego(rego) {
-      rego = rego.toUpperCase();
-      if (!rego) return;
-      recentRegos = recentRegos.filter(r => r !== rego);
-      recentRegos.unshift(rego);
-      if (recentRegos.length > 13) recentRegos.pop();
-      renderRecentList();
-    }
-
-    function renderRecentList() {
-      recentList.innerHTML = "";
-      recentRegos.forEach(rego => {
-        const li = document.createElement("li");
-        li.textContent = rego;
-
-        const btn = document.createElement("button");
-        btn.className = "copyBtn";
-        btn.title = `Copy ${rego}`;
-        btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy" viewBox="0 0 24 24"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg> Copy`;
-        btn.onclick = () => {
-          navigator.clipboard.writeText(rego);
-          btn.innerHTML = "Copied!";
-          setTimeout(renderRecentList, 1500);
-        };
-
-        li.appendChild(btn);
-        recentList.appendChild(li);
-      });
-    }
-
-    function buildStateList(rego) {
-      let html = "<ul>";
-      Object.entries(stateLinks).forEach(([state, url]) => {
-        html += `<li onclick="window.open('${url}', '_blank'); addRecentRego('${rego}'); input.value=''; result.innerHTML=''; suggestion.innerHTML='';">${state}</li>`;
-      });
-      html += "</ul>";
-      result.innerHTML = html;
-    }
-
-    input.addEventListener("input", () => {
-      let val = input.value.trim().toUpperCase();
-      let [rego, suffix] = val.split(" ");
-
-      if (!rego || rego.length < 2) {
-        result.innerHTML = "";
-        suggestion.innerHTML = "";
-        return;
-      }
-
-      navigator.clipboard.writeText(rego);
-
-      if (suffix && stateLinks[suffix]) {
-        window.open(stateLinks[suffix], "_blank");
-        addRecentRego(rego);
-        input.value = "";
-        result.innerHTML = "";
-        suggestion.innerHTML = "";
-        return;
-      }
-
-      const guess = detectState(rego);
-      if (guess) {
-        suggestion.innerHTML = `Looks like this is from <strong>${guess}</strong> — <span style="text-decoration:underline; cursor:pointer;" onclick="window.open(stateLinks['${guess}'], '_blank'); addRecentRego('${rego}'); input.value=''; result.innerHTML=''; suggestion.innerHTML='';">click to open</span>`;
-      } else {
-        suggestion.innerHTML = "";
-      }
-
-      buildStateList(rego);
-    });
-
-    // Theme preference
-    function setTheme(mode) {
-      document.documentElement.setAttribute("data-theme", mode);
-      localStorage.setItem("theme", mode);
-      themeToggle.checked = mode === "dark";
-    }
-
-    themeToggle.addEventListener("change", () => {
-      setTheme(themeToggle.checked ? "dark" : "light");
-    });
-
-    const savedTheme = localStorage.getItem("theme");
-    if (savedTheme) {
-      setTheme(savedTheme);
-    } else {
-      const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-      setTheme(prefersDark ? "dark" : "light");
-    }
-  </script>
+<!-- Previous working code is restored here -->
 </body>
 </html>
